--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.example.sma'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.sma"
-        minSdk 21
-        targetSdk 32
+        minSdk 26
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -33,9 +33,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation files('C:\\Users\\Melkor\\Documents\\Projects\\AndroidStudioProjects\\SMA\\app\\libs\\jtds-1.3.1.jar')
+    implementation 'net.sourceforge.jtds:jtds:1.3.1'
+//    implementation files('C:/Users/Melkor/Documents/Projects/AndroidStudioProjects/SMA/app/libs/jtds-1.3.1.jar')
 //    implementation files('C:\\Users\\Melkor\\Documents\\Projects\\AndroidStudioProjects\\SMA\\app\\libs\\mssql-jdbc-11.2.0.jre18.jar')
-    implementation files('C:\\Users\\Melkor\\Documents\\Projects\\AndroidStudioProjects\\SMA\\app\\libs\\mssql-jdbc-11.2.0.jre8.jar')
+    implementation files('C:/Users/Melkor/Documents/Projects/AndroidStudioProjects/SMA/app/libs/mssql-jdbc-11.2.0.jre8.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
