--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 //    implementation files('C:/Users/Melkor/Documents/Projects/AndroidStudioProjects/SMA/app/libs/jtds-1.3.1.jar')
 //    implementation files('C:\\Users\\Melkor\\Documents\\Projects\\AndroidStudioProjects\\SMA\\app\\libs\\mssql-jdbc-11.2.0.jre18.jar')
     implementation files('C:/Users/Melkor/Documents/Projects/AndroidStudioProjects/SMA/app/libs/mssql-jdbc-11.2.0.jre8.jar')
+    implementation 'com.android.car.ui:car-ui-lib:2.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
