--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'net.sourceforge.jtds:jtds:1.3.1'
 //    implementation files('C:/Users/Melkor/Documents/Projects/AndroidStudioProjects/SMA/app/libs/jtds-1.3.1.jar')
 //    implementation files('C:\\Users\\Melkor\\Documents\\Projects\\AndroidStudioProjects\\SMA\\app\\libs\\mssql-jdbc-11.2.0.jre18.jar')
-    implementation files('C:/Users/Melkor/Documents/Projects/AndroidStudioProjects/SMA/app/libs/mssql-jdbc-11.2.0.jre8.jar')
+    implementation files('D:/Projects/AndroidStudioProjects/CHS/app/libs/mssql-jdbc-11.2.0.jre8.jar')
     implementation 'com.android.car.ui:car-ui-lib:2.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
